[package]
name = "trackflights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-rt = "2.7.0"
bson = "2.2.0"
chrono = "0.4.19"
mongodb = "2.2.1"
rustc-serialize = "0.3.24"
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
